fix(Box): fix possible color tokens

--- a/packages/orbit-components/src/Box/TYPESCRIPT_TEMPLATE.template
+++ b/packages/orbit-components/src/Box/TYPESCRIPT_TEMPLATE.template
@@ -12,83 +12,7 @@ export type Elevation =
   | "fixedReverse"
   | "raisedReverse";
 
-export type ColorTokens =
-  | "productLight"
-  | "productLightHover"
-  | "productLightActive"
-  | "productNormal"
-  | "productNormalHover"
-  | "productNormalActive"
-  | "productDark"
-  | "productDarkHover"
-  | "productDarkActive"
-  | "productDarker"
-  | "white"
-  | "whiteHover"
-  | "whiteActive"
-  | "cloudLight"
-  | "cloudLightHover"
-  | "cloudLightActive"
-  | "cloudNormal"
-  | "cloudNormalHover"
-  | "cloudNormalActive"
-  | "cloudDark"
-  | "cloudDarkHover"
-  | "cloudDarkActive"
-  | "inkLight"
-  | "inkLightHover"
-  | "inkLightActive"
-  | "inkDark"
-  | "inkDarkHover"
-  | "inkDarkActive"
-  | "inkNormal"
-  | "inkNormalHover"
-  | "inkNormalActive"
-  | "orangeLight"
-  | "orangeLightHover"
-  | "orangeLightActive"
-  | "orangeNormal"
-  | "orangeNormalHover"
-  | "orangeNormalActive"
-  | "orangeDark"
-  | "orangeDarkHover"
-  | "orangeDarkActive"
-  | "orangeDarker"
-  | "redLight"
-  | "redLightHover"
-  | "redLightActive"
-  | "redNormal"
-  | "redNormalHover"
-  | "redNormalActive"
-  | "redDark"
-  | "redDarkHover"
-  | "redDarkActive"
-  | "redDarker"
-  | "greenLight"
-  | "greenLightHover"
-  | "greenLightActive"
-  | "greenNormal"
-  | "greenNormalHover"
-  | "greenNormalActive"
-  | "greenDark"
-  | "greenDarkHover"
-  | "greenDarkActive"
-  | "greenDarker"
-  | "blueLight"
-  | "blueLightHover"
-  | "bundleBasic"
-  | "bundleMedium"
-  | "blueLightActive"
-  | "blueNormal"
-  | "blueNormalHover"
-  | "blueNormalActive"
-  | "blueDark"
-  | "blueDarkHover"
-  | "blueDarkActive"
-  | "blueDarker"
-  | "socialFacebook"
-  | "socialFacebookHover"
-  | "socialFacebookActive";
+export type ColorTokens =%TOKENS%
 
 export type SpacingToken =
   | "none"
