--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Compile design tokens
         run: yarn tokens build
 
+      - name: Build tailwind
+        run: yarn tailwind-preset build
+
       - name: Build Storybook
         run: yarn components build:storybook
 
