--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "eslint:docs": "eslint --fix docs/src/documentation --report-unused-disable-directives",
     "loki:approve": "yarn components loki approve",
     "loki:test": "yarn components loki test",
-    "orbit-kiwi:build": "yarn && yarn tokens build && yarn components build && yarn themer build && yarn docs build",
+    "orbit-kiwi:build": "yarn && yarn tokens build && yarn tailwind-preset build && yarn components build && yarn themer build && yarn docs build",
     "postinstall": "lerna run postinstall --stream",
     "prepare": "husky install",
     "prettier:test": "prettier --check '**/*.md'",
     "publish-packages": "zx scripts/publish.mjs",
-    "size:build": "yarn tokens build && yarn components size:build",
+    "size:build": "yarn tokens build && yarn tailwind-preset build && yarn components size:build",
     "size": "yarn size:build && size-limit",
     "test-ci": "jest --ci --maxWorkers=2 && lerna run test",
     "test": "jest",
@@ -66,12 +66,18 @@
     "@size-limit/file": "^8.0.0",
     "@size-limit/webpack": "^8.0.0",
     "@stylelint/postcss-css-in-js": "^0.38.0",
+    "@testing-library/cypress": "^8.0.0",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/react-hooks": "^7.0.0",
+    "@testing-library/user-event": "^13.1.1",
     "@types/dedent": "^0.7.0",
     "@types/dotenv-safe": "^8.1.2",
     "@types/lodash": "^4.14.194",
     "@types/prettier": "^2.7.2",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "babel-jest": "^28.1.3",
@@ -88,21 +94,15 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-node": "^0.3.7",
     "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-orbit-components": "*",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-orbit-components": "*",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "@testing-library/cypress": "^8.0.0",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/react-hooks": "^7.0.0",
-    "@testing-library/user-event": "^13.1.1",
     "fast-glob": "^3.2.12",
     "filedirname": "^2.7.0",
     "flow-bin": "^0.187.1",
@@ -114,7 +114,8 @@
     "lint-staged": "^12.3.2",
     "lodash": "^4.17.21",
     "markdown-magic": "^2.6.0",
-    "postcss": "^8.4.18",
+    "postcss": "^8.4.24",
+    "postcss-cli": "^10.1.0",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.8.7",
     "raf": "^3.4.1",
