--- a/packages/orbit-components/src/Separator/TYPESCRIPT_TEMPLATE.template
+++ b/packages/orbit-components/src/Separator/TYPESCRIPT_TEMPLATE.template
@@ -14,7 +14,7 @@ export interface CommonProps extends Common.SpaceAfter {
 
 type ConditionalSeparatorType =
   | {
-      readonly color: PaletteTokens;
+      readonly color?: PaletteTokens;
       readonly type: "solid" | "dashed" | "dotted" | "double" | "none";
     }
   | {
