fix(Separator): fix background and border issue (#3925)
* fix(Separator): fix background and border issue

* Update packages/orbit-components/src/Separator/types.d.ts

Co-authored-by: Daniel Sil <daniel.sil@kiwi.com>

* Update packages/orbit-components/src/Separator/TYPESCRIPT_TEMPLATE.template

Co-authored-by: Daniel Sil <daniel.sil@kiwi.com>

---------

Co-authored-by: Daniel Sil <daniel.sil@kiwi.com>

--- a/packages/orbit-components/src/Separator/TYPESCRIPT_TEMPLATE.template
+++ b/packages/orbit-components/src/Separator/TYPESCRIPT_TEMPLATE.template
@@ -7,9 +7,19 @@ export type Align = "left" | "center" | "right";
 
 export type PaletteTokens =%TOKENS%
 
-export interface Props extends Common.SpaceAfter {
+export interface CommonProps extends Common.SpaceAfter {
   indent?: Indent;
-  type?: "solid" | "dashed" | "dotted" | "double" | "none";
-  color?: PaletteTokens;
   align?: Align;
 }
+
+type ConditionalSeparatorType =
+  | {
+      readonly color?: PaletteTokens;
+      readonly type: "solid" | "dashed" | "dotted" | "double" | "none";
+    }
+  | {
+      readonly color?: false;
+      readonly type?: never;
+    };
+
+export type Props = CommonProps & ConditionalSeparatorType;
