--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,7 +4,11 @@
   "overrides": [
     {
       "files": ["*.ts?(x)"],
-      "extends": ["stylelint-config-recommended", "stylelint-config-styled-components"]
+      "extends": [
+        "stylelint-config-recommended",
+        "stylelint-config-styled-components",
+        "stylelint-config-tailwindcss"
+      ]
     }
   ],
   "rules": {
