--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "stylelint": "^15.10.1",
     "stylelint-config-recommended": "^13.0.0",
     "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-config-tailwindcss": "^0.0.7",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "tsc-files": "^1.1.3",
