--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "fast-glob": "^3.2.12",
     "filedirname": "^2.7.0",
     "flow-bin": "^0.187.1",
@@ -118,6 +119,7 @@
     "postcss-cli": "^10.1.0",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "raf": "^3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
