--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -121,6 +121,7 @@
     "make-runnable": "^1.3.10",
     "monstra": "^0.9.2",
     "nanostores": "^0.5.12",
+    "onecolor": "^4.0.0",
     "ora": "^6.1.0",
     "react-element-to-jsx-string": "^14.3.2",
     "react-window": "^1.8.6",
