--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -120,6 +120,7 @@
     "loki": "^0.30.3",
     "monstra": "^0.9.2",
     "nanostores": "^0.5.12",
+    "onecolor": "^4.0.0",
     "ora": "^6.1.0",
     "react-element-to-jsx-string": "^14.3.2",
     "react-window": "^1.8.6",
