feat(Box): migrate to Tailwind
BREAKING CHANGE: StyledBox removed. `.orbit-box` selector should be used

chore(Stack): remove redundant helper functions

chore: extend common tailwind classes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -105,6 +105,7 @@ jobs:
       - name: Cypress
         uses: cypress-io/github-action@v5
         with:
+          browser: chrome
           install: false
           working-directory: packages/orbit-components
           start: yarn cy:dev
