--- a/package.json
+++ b/package.json
@@ -121,13 +121,9 @@
     "lint-staged": "^12.3.2",
     "lodash": "^4.17.21",
     "markdown-magic": "^2.6.0",
-<<<<<<< HEAD
     "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
-=======
     "nx": "^16.4.0",
-    "postcss": "^8.4.18",
->>>>>>> 76357de2d (chore: use nx)
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.4.1",
@@ -152,6 +148,7 @@
     "stylelint-config-tailwindcss": "^0.0.7",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
+    "tsup": "^7.1.0",
     "typescript": "^4.8.3",
     "zx": "^7.0.7"
   }
