chore: fix test command

--- a/nx.json
+++ b/nx.json
@@ -20,6 +20,9 @@
     },
     "check:lint": {
       "inputs": ["{workspaceRoot}/.eslintrc.cjs"]
+    },
+    "test": {
+      "dependsOn": ["build", "^build"]
     }
   },
   "tasksRunnerOptions": {
