--- a/packages/orbit-tailwind-preset/package.json
+++ b/packages/orbit-tailwind-preset/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kiwicom/orbit-tailwind-preset",
-  "version": "1.0.0-beta.8",
+  "version": "1.0.0",
   "description": "Orbit tailwind preset which is based on orbit-design-tokens",
   "author": "Kiwi.com",
   "license": "MIT",
