--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -72,8 +72,8 @@
     "styled-components": "^5"
   },
   "dependencies": {
-    "@kiwicom/orbit-design-tokens": "^5.0.0-beta.4",
-    "@kiwicom/orbit-tailwind-preset": "^1.0.0-beta.8",
+    "@kiwicom/orbit-design-tokens": "^5.0.0",
+    "@kiwicom/orbit-tailwind-preset": "^1.0.0",
     "@popperjs/core": "^2.9.2",
     "clsx": "^2.0.0",
     "react-hot-toast": "^2.4.0",
