Revert "feat(tokens): 5.0.0 release"
This reverts commit 4a57c2147f92c2a219a83b70fad3f75af472ebe9.

--- a/packages/orbit-design-tokens/package.json
+++ b/packages/orbit-design-tokens/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kiwicom/orbit-design-tokens",
-  "version": "5.0.0",
+  "version": "5.0.0-beta.4",
   "description": "Design tokens for Kiwi.com.",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
