--- a/docs/package.json
+++ b/docs/package.json
@@ -29,9 +29,9 @@
     "@jsdevtools/rehype-url-inspector": "^2.0.2",
     "@kiwicom/babel-plugin-orbit-components": "*",
     "@kiwicom/orbit-components": "*",
-    "@kiwicom/orbit-design-tokens": "5.0.0",
+    "@kiwicom/orbit-design-tokens": "*",
     "@kiwicom/orbit-themer": "*",
-    "@kiwicom/orbit-tailwind-preset": "1.0.0",
+    "@kiwicom/orbit-tailwind-preset": "*",
     "@loadable/component": "^5.15.3",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/mdx": "^1.6.22",
