chore: update @typescript-eslint and typescript
chore: fix eslint errors after @typescript-eslint update

chore: update dedent dep

chore: include internal as a config into eslint and rise typescript ver

chore: remove errors and warnings

docs(eslint-plugin): update README.md

Update packages/orbit-components/cypress/integration/index.tsx

Co-authored-by: Daniel Sil <daniel.sil@kiwi.com>

chore: add allowImportingTsExtensions to tsconfig

chore(InputSelect): rewrite type to interface

chore(Stack): remove spaceAfter from Tablet story

--- a/packages/eslint-plugin-orbit-components/tsconfig.json
+++ b/packages/eslint-plugin-orbit-components/tsconfig.json
@@ -2,10 +2,14 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist",
+    "module": "esnext",
     "noEmit": true,
-    "moduleResolution": "node"
-  },
-  "include": ["src/**/*.ts"],
-  "exclude": ["**/*.test.ts"]
+    "paths": {
+      // fix the path to utils module to prevent build from failing
+      "@typescript-eslint/utils": [
+        "../../node_modules/@typescript-eslint/utils/dist/ts-eslint/Rule.js"
+      ]
+    },
+    "moduleResolution": "bundler"
+  }
 }
