--- a/package.json
+++ b/package.json
@@ -75,19 +75,20 @@
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.194",
     "@types/prettier": "^2.7.2",
+    "@types/pngjs": "^6.0.2",
     "@types/react": ">=17.0.26",
     "@types/react-dom": ">=17.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "babel-jest": "^28.1.3",
     "browserslist": "^4.16.6",
     "chromatic": "^7.2.3",
     "cpy-cli": "^3.1.1",
     "cross-env": "^7.0.2",
-    "dedent": "^0.7.0",
+    "dedent": "^1.5.1",
     "del-cli": "^5.0.0",
     "dotenv-safe": "^8.2.0",
-    "eslint": "^8.37.0",
+    "eslint": "^8.47.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -144,7 +145,7 @@
     "ts-node": "^10.9.1",
     "tsc-files": "^1.1.3",
     "tsup": "^6.7.0",
-    "typescript": "^4.8.3",
+    "typescript": "^5.0.0",
     "zx": "^7.0.7"
   }
 }
