--- a/packages/eslint-plugin-orbit-components/package.json
+++ b/packages/eslint-plugin-orbit-components/package.json
@@ -21,6 +21,9 @@
     "url": "https://github.com/kiwicom/orbit.git",
     "directory": "packages/eslint-plugin-orbit-components"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "gitHead": "5e7d8f283e39532de0393f7f42cea2f7d33f6ac7",
   "files": [
     "dist",
@@ -44,10 +47,11 @@
     "eslint": ">=8"
   },
   "devDependencies": {
+    "@typescript-eslint/rule-tester": "^6.5.0",
     "del-cli": "^5.0.0",
     "tsup": "^6.1.0"
   },
   "dependencies": {
-    "@babel/types": "=7.12.10"
+    "@typescript-eslint/utils": "^6.5.0"
   }
 }
