ci: automate package release
Closes FEPLT-1675

chore: bump lerna to v7

chore: add post-changelog script

chore: replace SLACK_API_POST_RELEASE_MESSAGE env var with variable

docs: add publish releases section to contributing

ci: fix lerna.json nesting

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 GH_TOKEN=
 GATSBY_GOOGLE_CLIENT_ID=
 FIGMA_TOKEN=
+NPM_TOKEN=
 SLACK_TOKEN=
-SLACK_API_POST_RELEASE_MESSAGE=
 SLACK_API_READ_PLZ_ORBIT=
 GATSBY_ORBIT_STORAGE_PATH=
 ORBIT_STORAGE_PATH=
