--- a/package.json
+++ b/package.json
@@ -107,11 +107,12 @@
     "fast-glob": "^3.2.12",
     "filedirname": "^2.7.0",
     "flow-bin": "^0.187.1",
+    "gitdiff-parser": "^0.3.1",
     "husky": "^6.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "jest-matchmedia-mock": "^1.1.0",
-    "lerna": "5.2.0",
+    "lerna": "7.2.0",
     "lint-staged": "^12.3.2",
     "lodash": "^4.17.21",
     "markdown-magic": "^2.6.0",
@@ -132,6 +133,7 @@
     "remark-preset-lint-recommended": "^5.0.0",
     "remark-preset-prettier": "^0.4.0",
     "remark-validate-links": "^10.0.2",
+    "simple-git": "^3.19.1",
     "size-limit": "^8.0.0",
     "slackify-markdown": "^4.3.1",
     "styled-components": "^5.3.1",
