--- a/lerna.json
+++ b/lerna.json
@@ -2,14 +2,16 @@
   "$schema": "http://json.schemastore.org/lerna",
   "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true,
-  "packages": [
-    "packages/*",
-    "docs"
-  ],
+  "packages": ["packages/*", "docs"],
   "command": {
     "version": {
-      "message": "chore: publish"
+      "allowBranch": "master",
+      "message": "chore: publish",
+      "conventionalCommits": true
+    },
+    "publish": {
+      "allowBranch": "master",
+      "conventionalCommits": true
     }
   }
 }
