--- a/packages/orbit-tracking/package.json
+++ b/packages/orbit-tracking/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kiwicom/orbit-tracking",
+  "name": "@mvidalgarcia/orbit-tracking",
   "version": "1.1.0",
   "private": true,
   "description": "Tracking for orbit design system",
