--- a/lerna.json
+++ b/lerna.json
@@ -3,13 +3,15 @@
   "version": "independent",
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "packages": [
-    "packages/*",
-    "docs"
-  ],
+  "packages": ["packages/*", "docs"],
   "command": {
     "version": {
-      "message": "chore: publish"
+      "message": "chore: publish",
+      "allowBranch": "master"
     }
+  },
+  "publish": {
+    "allowBranch": "master",
+    "registry": "https://gitlab.skypicker.com/api/v4/projects/4623/packages/npm/"
   }
 }
