--- a/packages/orbit-themer/package.json
+++ b/packages/orbit-themer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kiwicom/orbit-themer",
+  "name": "@mvidalgarcia/orbit-themer",
   "version": "1.0.0",
   "private": "true",
   "description": "Design your own orbit-components theme with custom colors",
