--- a/docs/package.json
+++ b/docs/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "gatsby develop",
-    "fetch:contributors": "babel-node ./plugins/contributors/fetchContributors.mjs",
+    "fetch:contributors": "zx ./plugins/contributors/fetchContributors.mjs",
     "changelog": "zx ./services/changelog.mjs",
     "check:types": "tsc",
     "build": "gatsby build",
@@ -24,7 +24,6 @@
     ]
   },
   "dependencies": {
-    "@babel/node": "^7.20.7",
     "@babel/plugin-syntax-jsx": "^7.18.6",
     "@babel/standalone": "^7.18.9",
     "@csstools/convert-colors": "^2.0.0",
@@ -33,8 +32,8 @@
     "@kiwicom/babel-plugin-orbit-components": "*",
     "@kiwicom/orbit-components": "*",
     "@kiwicom/orbit-design-tokens": "*",
-    "@kiwicom/orbit-themer": "*",
     "@kiwicom/orbit-tailwind-preset": "*",
+    "@kiwicom/orbit-themer": "*",
     "@loadable/component": "^5.15.3",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/mdx": "^1.6.22",
@@ -80,6 +79,7 @@
     "gatsby-plugin-manifest": "^4.11.1",
     "gatsby-plugin-mdx": "^3.15.2",
     "gatsby-plugin-meta-redirect": "^1.1.1",
+    "gatsby-plugin-postcss": "^6.12.0",
     "gatsby-plugin-react-helmet": "^5.9.0",
     "gatsby-plugin-root-import": "^2.0.8",
     "gatsby-plugin-sharp": "^4.11.1",
