chore: add tailwind folder as temporary storage for refactored components

--- a/packages/orbit-components/tsconfig-build.json
+++ b/packages/orbit-components/tsconfig-build.json
@@ -15,6 +15,7 @@
     "**/__tests__/**/*",
     "**/__typetests__/**/*",
     "**/*.stories.*",
+    "**/tmp-tailwind/**",
     "**/RenderInRtl.tsx"
   ]
 }
