--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Setup git config
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "mainframev"
+          git config user.email "vgenaev@gmail.com"
 
       - name: Dry run
         if: ${{ github.event.inputs.dryrun == 'true' }}
