--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 # fetch tags
+          token: ${{ secrets.PAT }}
 
       - name: Node
         uses: ./.github/actions/node
