--- a/packages/orbit-components/tsconfig.json
+++ b/packages/orbit-components/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "lib",
     "skipLibCheck": true,
     "noEmit": true,
-    "types": ["node", "jest", "@testing-library/jest-dom"],
+    "types": ["node", "jest", "@testing-library/jest-dom", "jest-styled-components"],
     "moduleResolution": "node",
     "importsNotUsedAsValues": "error"
   },
