--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -108,6 +108,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/capitalize": "^2.0.0",
+    "@types/pixelmatch": "^5.2.4",
     "@types/readable-stream": "^2.3.13",
     "@types/styled-components": "^5.1.15",
     "@types/svgicons2svgfont": "^10.0.1",
@@ -128,6 +129,8 @@
     "nanostores": "^0.5.12",
     "onecolor": "^4.0.0",
     "ora": "^6.1.0",
+    "pixelmatch": "^5.3.0",
+    "pngjs": "^7.0.0",
     "react-element-to-jsx-string": "^14.3.2",
     "react-window": "^1.8.6",
     "sharp": "^0.30.5",
