test(Wizard): adjust timeout and remove steps
chore: use testing-library from root package.json

test: remove act warnings from ComponentStructure

chore: remove build errors

--- a/packages/orbit-design-tokens/tsconfig.json
+++ b/packages/orbit-design-tokens/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "noEmit": true,
     "target": "esnext",
+    "types": ["@testing-library/jest-dom"],
     "module": "esnext",
     "allowJs": true,
     "moduleResolution": "node",
