--- a/packages/orbit-themer/tsconfig.json
+++ b/packages/orbit-themer/tsconfig.json
@@ -16,7 +16,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "declaration": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "types": ["@testing-library/jest-dom"]
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
