--- a/package.json
+++ b/package.json
@@ -67,16 +67,16 @@
     "@stylelint/postcss-css-in-js": "^0.38.0",
     "@testing-library/cypress": "^10.0.1",
     "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/react-hooks": "^7.0.0",
-    "@testing-library/user-event": "^14.4.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.5.1",
     "@types/dedent": "^0.7.0",
     "@types/dotenv-safe": "^8.1.2",
+    "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.194",
     "@types/prettier": "^2.7.2",
     "@types/react": ">=17.0.26",
     "@types/react-dom": ">=17.0.9",
-    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "babel-jest": "^28.1.3",
