--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@typescript-eslint/parser": "^5.57.1",
     "babel-jest": "^28.1.3",
     "browserslist": "^4.16.6",
+    "chromatic": "^7.2.3",
     "cpy-cli": "^3.1.1",
     "cross-env": "^7.0.2",
     "dedent": "^0.7.0",
