--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,9 +1,6 @@
 name: "Chromatic"
 
 on:
-  push:
-    branches:
-      - master
   pull_request:
     branches:
       - "**"
@@ -32,19 +29,11 @@ jobs:
           yarn tokens build
           yarn tailwind-preset build
 
-      - if: ${{ github.event.inputs.force != true && github.ref != 'refs/heads/master' }}
-        name: "Chromatic dry run"
-        run: echo "Publishing dry run to Chromatic"
-
-      - if: ${{ github.event.inputs.force == true || github.ref == 'refs/heads/master' }}
-        name: "Chromatic publish"
-        run: echo "Would publish to Chromatic"
-
-      # - name: Publish to Chromatic
-      #   uses: chromaui/action@v1
-      #   with:
-      #     projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-      #     workingDir: packages/orbit-components
-      #     buildScriptName: build:storybook
-      #     exitZeroOnChanges: false
-      #     dryRun: ${{ github.event.inputs.force != true && github.ref != 'refs/heads/master' }}
+      - name: Publish to Chromatic
+        uses: chromaui/action@v1
+        with:
+          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          workingDir: packages/orbit-components
+          buildScriptName: build:storybook
+          exitZeroOnChanges: false
+          dryRun: ${{ github.event.inputs.force != 'true' }}
