--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -132,6 +132,7 @@
     "sharp": "^0.30.5",
     "start-server-and-test": "^1.13.1",
     "storybook": "^7.0.23",
+    "storybook-addon-pseudo-states": "^2.1.2",
     "styled-components": "^5.3.1",
     "surge": "^0.23.0",
     "svg2ttf": "^6.0.0",
