feat(Stepper): migrate to Tailwind
docs: update tailwind status yaml

Update packages/orbit-components/src/Stepper/StepperStateless/index.tsx

Co-authored-by: Marco Vidal García <marco.vidal@kiwi.com>

Update packages/orbit-components/src/Stepper/StepperStateless/index.tsx

Co-authored-by: Marco Vidal García <marco.vidal@kiwi.com>

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -82,8 +82,8 @@ Slide: false
 Slider: false
 SocialButton: true
 Stack: true
-Stepper: false
-StepperStateless: false
+Stepper: true
+StepperStateless: true
 StopoverArrow: false
 Switch: true
 Tab: false
