docs: mark NotificationBadge as migrated

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -62,7 +62,7 @@ ModalFooter: true
 ModalHeader: true
 ModalSection: true
 NavigationBar: true
-NotificationBadge: false
+NotificationBadge: true
 OrbitProvider: true
 Pagination: false
 Popover: false
