docs: update tailwind-migration-status.yaml

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -1,11 +1,15 @@
 Accordion: false
-AirportIllustration: false
+AirportIllustration: true
 Alert: true
+AlertButton: true
 Badge: true
 BadgeList: true
+BadgeListItem: true
 BaggageStepper: false
 Breadcrumbs: true
+BreadcrumbsItem: true
 Box: true
+OrbitButton: true
 Button: true
 ButtonGroup: true
 ButtonLink: true
@@ -13,12 +17,14 @@ ButtonMobileStore: false
 ButtonPrimitive: true
 CallOutBanner: false
 Card: true
+CardSection: true
 CarrierLogo: true
 Checkbox: false
 ChoiceGroup: false
 Collapse: false
 Coupon: false
 CountryFlag: true
+Desktop: true
 Dialog: true
 Drawer: true
 ErrorFormTooltip: true
@@ -26,47 +32,81 @@ FeatureIcon: false
 FormLabel: true
 Grid: true
 Heading: true
+Hide: true
+HorizontalScroll: true
+Illustration: true
 IllustrationPrimitive: true
 IllustrationPrimitiveList: false
-InputField: false
+InputField: true
 InputFile: true
-InputGroup: false
+InputGroup: true
 InputSelect: true
 Inline: false
 Itinerary: false
+ItineraryBadgeList: false
+ItinerarySegment: false
+ItinerarySegmentBanner: false
+ItinerarySegmentDetail: false
+ItinerarySegmentStop: false
 Layout: true
+LayoutColumn: false
 LinkList: true
+OrbitList: true
 List: true
+ListItem: true
 ListChoice: true
 Loading: true
+Mobile: true
 Modal: false
+ModalFooter: false
+ModalHeader: false
+ModalSection: false
 NavigationBar: true
 NotificationBadge: false
+OrbitProvider: true
 Pagination: false
 Popover: false
+Portal: true
 Radio: true
+NewSeatIcon: false
 Seat: false
+SeatLegend: true
 SegmentedSwitch: true
 Select: true
 Separator: false
 ServiceLogo: false
+Skeleton: false
 SkipLink: false
 SkipNavigation: false
+Slide: false
 Slider: false
-SocialButton: false
+SocialButton: true
 Stack: true
 Stepper: false
+StepperStateless: false
 StopoverArrow: false
 Switch: true
+Tab: false
+TabPanel: false
 Table: false
+TableBody: false
+TableCell: false
+TableHead: false
+TableRow: false
 Tabs: false
 Tag: false
-Tile: false
+Tile: true
 TileGroup: false
+OrbitText: true
+TextOrbit: true
 Text: true
 TextLink: true
 Textarea: true
 Timeline: false
+TimelineStep: false
 Toast: false
+ToastRoot: false
+Tooltip: false
 Truncate: false
 Wizard: false
+WizardStep: false
