feat(ButtonMobileStore): migrate to Tailwind

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -13,7 +13,7 @@ OrbitButton: true
 Button: true
 ButtonGroup: true
 ButtonLink: true
-ButtonMobileStore: false
+ButtonMobileStore: true
 ButtonPrimitive: true
 CallOutBanner: false
 Card: true
