chore: add jsx react to tsconfig

--- a/packages/orbit-components/tsconfig.json
+++ b/packages/orbit-components/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "rootDirs": ["./src", "./.storybook"],
     "outDir": "lib",
+    "jsx": "react",
     "skipLibCheck": true,
     "noEmit": true,
     "moduleResolution": "node",
