feat(Collapse): migrate to tailwind

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -21,7 +21,7 @@ CardSection: true
 CarrierLogo: true
 Checkbox: false
 ChoiceGroup: false
-Collapse: false
+Collapse: true
 Coupon: false
 CountryFlag: true
 Desktop: true
