feat(Skeleton): migrate to Tailwind
closes FEPLT-1720

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -75,7 +75,7 @@ SegmentedSwitch: true
 Select: true
 Separator: false
 ServiceLogo: false
-Skeleton: false
+Skeleton: true
 SkipLink: false
 SkipNavigation: false
 Slide: false
