docs: mark Toast as migrated to Tailwind

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -104,7 +104,7 @@ TextLink: true
 Textarea: true
 Timeline: false
 TimelineStep: false
-Toast: false
+Toast: true
 ToastRoot: false
 Tooltip: false
 Truncate: false
