docs: update tailwind status yaml

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -86,14 +86,16 @@ Stepper: true
 StepperStateless: true
 StopoverArrow: false
 Switch: true
-Tab: false
-TabPanel: false
+Tab: true
+TabPanel: true
 Table: true
 TableBody: true
 TableCell: true
 TableHead: true
 TableRow: true
-Tabs: false
+Tabs: true
+TabPanels: true
+TabList: true
 Tag: false
 Tile: true
 TileGroup: true
