feat(ChoiceGroup): migrate to Tailwind
Closes FEPLT-1707

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -20,7 +20,7 @@ Card: true
 CardSection: true
 CarrierLogo: true
 Checkbox: true
-ChoiceGroup: false
+ChoiceGroup: true
 Collapse: true
 Coupon: false
 CountryFlag: true
