docs: mark Tooltip as migrated

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -106,7 +106,7 @@ Timeline: false
 TimelineStep: false
 Toast: true
 ToastRoot: false
-Tooltip: false
+Tooltip: true
 Truncate: false
 Wizard: false
 WizardStep: false
