feat(Truncate): migrate to Tailwind
Closes FEPLT-1728

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -107,6 +107,6 @@ TimelineStep: false
 Toast: true
 ToastRoot: false
 Tooltip: true
-Truncate: false
+Truncate: true
 Wizard: false
 WizardStep: false
