--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -50,7 +50,9 @@
     "component"
   ],
   "browserslist": [
-    "extends @kiwicom/browserslist-config"
+    "extends @kiwicom/browserslist-config",
+    "iOS >= 14",
+    "Safari >= 14"
   ],
   "files": [
     "es",
