feat(Popover): migrate to Tailwind

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -65,7 +65,7 @@ NavigationBar: true
 NotificationBadge: true
 OrbitProvider: true
 Pagination: false
-Popover: false
+Popover: true
 Portal: true
 Radio: true
 NewSeatIcon: false
