--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -82,6 +82,7 @@
     "@kiwicom/orbit-tailwind-preset": "^3.0.2",
     "@popperjs/core": "^2.9.2",
     "clsx": "^2.0.0",
+    "color2k": "^2.0.2",
     "react-hot-toast": "^2.4.0",
     "react-popper": "^2.3.0"
   },
