--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -14,23 +14,23 @@
     "cy:dev": "vite cypress/integration --logLevel silent",
     "cy:run": "start-server-and-test cy:dev http-get://localhost:3000 'cypress run'",
     "cy:open": "start-server-and-test cy:dev http-get://localhost:3000 'cypress open'",
-    "build": "ts-node --esm config/build/index.mts",
+    "build": "node --loader ts-node/esm config/build/index.mts",
     "tailwind": "cross-env NODE_ENV=test npx tailwindcss -i ./src/tailwind.css -o ./lib/tailwind.css",
     "prepublishOnly": "yarn build",
     "size:build": "yarn build --size",
     "size": "size-limit",
     "size:why": "size-limit --why",
-    "fetch:icons": "ts-node --esm config/fetchIcons.mts",
-    "check:icons": "ts-node --esm config/checkIconsCli.mts",
+    "fetch:icons": "node --loader ts-node/esm config/fetchIcons.mts",
+    "check:icons": "node --loader ts-node/esm config/checkIconsCli.mts",
     "check:types": "tsc --p tsconfig.json",
     "flow:ci": "flow check",
-    "build:iconsPng": "ts-node --esm config/generatePngIcons.mts",
-    "build:storybook": "ts-node --esm  config/build/buildIcons.mts && storybook build -c .storybook -o .out",
+    "build:iconsPng": "node --loader ts-node/esm config/generatePngIcons.mts",
+    "build:storybook": "node --loader ts-node/esm  config/build/buildIcons.mts && storybook build -c .storybook -o .out",
     "eslint:check": "eslint . --report-unused-disable-directives",
     "test-ct": "playwright test -c playwright-ct.config.ts",
     "deploy:storybook": "yarn storybook-to-ghpages -e ./.out",
     "deploy:surge": "yarn surge .out/",
-    "deploy:updateURL": "ts-node --esm config/deploymentUtils.mts updateLiveURL",
+    "deploy:updateURL": "node --loader ts-node/esm config/deploymentUtils.mts updateLiveURL",
     "docs-gen": "monstra docs"
   },
   "storybook-deployer": {
