--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -78,8 +78,8 @@
     "styled-components": "^5"
   },
   "dependencies": {
-    "@kiwicom/orbit-design-tokens": "^6.3.1",
-    "@kiwicom/orbit-tailwind-preset": "^3.1.0",
+    "@kiwicom/orbit-design-tokens": "6.3.1",
+    "@kiwicom/orbit-tailwind-preset": "3.1.0",
     "@popperjs/core": "^2.9.2",
     "clsx": "^2.0.0",
     "color2k": "^2.0.2",
