--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kiwicom/orbit-components",
-  "version": "11.3.0",
+  "version": "11.3.1",
   "description": "Orbit-components is a React component library which provides developers with the easiest possible way of building Kiwi.com’s products.",
   "sideEffects": false,
   "author": "Kiwi.com",
@@ -78,8 +78,8 @@
     "styled-components": "^5"
   },
   "dependencies": {
-    "@kiwicom/orbit-design-tokens": "6.3.1",
-    "@kiwicom/orbit-tailwind-preset": "3.1.0",
+    "@kiwicom/orbit-design-tokens": "^6.3.2",
+    "@kiwicom/orbit-tailwind-preset": "^3.1.1",
     "@popperjs/core": "^2.9.2",
     "clsx": "^2.0.0",
     "color2k": "^2.0.2",
