test: add maxDiffPixels to playwright and --ignore-scripts flag
Flag added to avoid warnings on install
MaxDiffPixels added to avoid problems with icons

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "tokens": "yarn workspace @kiwicom/orbit-design-tokens",
     "tracking": "yarn workspace @kiwicom/orbit-tracking",
     "update-supported-browsers": "markdown --path .github/contribution/testing-conventions.md && git add .github/contribution/testing-conventions.md",
-    "docker:reset": "rm -rf packages/orbit-components/playwright/.cache && yarn install --frozen-lockfile"
+    "docker:reset": "rm -rf packages/orbit-components/playwright/.cache && yarn install --frozen-lockfile --ignore-scripts"
   },
   "engines": {
     "yarn": ">=1.19.1"
