feat(FeatureIcon): migrate to Tailwind
Closes FEPLT-1721

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -28,7 +28,7 @@ Desktop: true
 Dialog: true
 Drawer: true
 ErrorFormTooltip: true
-FeatureIcon: false
+FeatureIcon: true
 FormLabel: true
 Grid: true
 Heading: true
